# cpp-interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ExampleBot/: CMakeLists.txt  ExampleBot.bot.toml  ExampleBot.cpp  ExampleBot.h  launcher.cpp  main.cpp
benchmark/: CMakeLists.txt  Simulator.cpp  Simulator.h  main.cpp
examples/ATBA/: ATBA.bot.toml  ATBA.cpp  ATBA.h  CMakeLists.txt  main.cpp
examples/ExampleBot/: ExampleBot.cpp  ExampleBot.h  launcher.cpp  main.cpp
